FlatMemGenerator/AntlrFiles/FlatBuffersParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from FlatBuffers.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class FlatBuffersParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		BooleanConstant=46, Ident=47, IntegerConstant=48, FloatConstant=49, StringConstant=50, 
		WS=51;
	public const int
		RULE_schema = 0, RULE_include = 1, RULE_namespace_decl = 2, RULE_type_decl = 3, 
		RULE_enum_decl = 4, RULE_root_decl = 5, RULE_file_extension_decl = 6, 
		RULE_file_identifier_decl = 7, RULE_attribute_decl = 8, RULE_rpc_decl = 9, 
		RULE_object = 10, RULE_commasep_enumval_decl = 11, RULE_commasep_metadata_item = 12, 
		RULE_commasep_object_item = 13, RULE_commasep_value = 14, RULE_commasep_annotation_decl = 15, 
		RULE_commasep_type_annotation_decl = 16, RULE_annotation_element_decl = 17, 
		RULE_type_annotation_decl = 18, RULE_field_decl = 19, RULE_field_annotation_decl = 20, 
		RULE_rpc_method = 21, RULE_type_ = 22, RULE_enumval_decl = 23, RULE_metadata = 24, 
		RULE_scalar = 25, RULE_single_value = 26, RULE_value = 27;
	public static readonly string[] ruleNames = {
		"schema", "include", "namespace_decl", "type_decl", "enum_decl", "root_decl", 
		"file_extension_decl", "file_identifier_decl", "attribute_decl", "rpc_decl", 
		"object", "commasep_enumval_decl", "commasep_metadata_item", "commasep_object_item", 
		"commasep_value", "commasep_annotation_decl", "commasep_type_annotation_decl", 
		"annotation_element_decl", "type_annotation_decl", "field_decl", "field_annotation_decl", 
		"rpc_method", "type_", "enumval_decl", "metadata", "scalar", "single_value", 
		"value"
	};

	private static readonly string[] _LiteralNames = {
		null, "'include'", "';'", "'namespace'", "'.'", "'table'", "'struct'", 
		"'{'", "'}'", "'enum'", "':'", "'union'", "'root_type'", "'file_extension'", 
		"'file_identifier'", "'attribute'", "'rpc_service'", "','", "'('", "')'", 
		"'//'", "'='", "'bool'", "'byte'", "'ubyte'", "'short'", "'ushort'", "'int'", 
		"'uint'", "'float'", "'long'", "'ulong'", "'double'", "'int8'", "'uint8'", 
		"'int16'", "'uint16'", "'int32'", "'uint32'", "'int64'", "'uint64'", "'float32'", 
		"'float64'", "'string'", "'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "BooleanConstant", 
		"Ident", "IntegerConstant", "FloatConstant", "StringConstant", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FlatBuffers.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FlatBuffersParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FlatBuffersParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FlatBuffersParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class SchemaContext : ParserRuleContext {
		public FlatMemGenerator.FlatBufferTree output;
		public IncludeContext includeOne;
		public Namespace_declContext namespaceOne;
		public Type_declContext typeOne;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FlatBuffersParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Enum_declContext[] enum_decl() {
			return GetRuleContexts<Enum_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Enum_declContext enum_decl(int i) {
			return GetRuleContext<Enum_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Root_declContext[] root_decl() {
			return GetRuleContexts<Root_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Root_declContext root_decl(int i) {
			return GetRuleContext<Root_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public File_extension_declContext[] file_extension_decl() {
			return GetRuleContexts<File_extension_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public File_extension_declContext file_extension_decl(int i) {
			return GetRuleContext<File_extension_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public File_identifier_declContext[] file_identifier_decl() {
			return GetRuleContexts<File_identifier_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public File_identifier_declContext file_identifier_decl(int i) {
			return GetRuleContext<File_identifier_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Attribute_declContext[] attribute_decl() {
			return GetRuleContexts<Attribute_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Attribute_declContext attribute_decl(int i) {
			return GetRuleContext<Attribute_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rpc_declContext[] rpc_decl() {
			return GetRuleContexts<Rpc_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rpc_declContext rpc_decl(int i) {
			return GetRuleContext<Rpc_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectContext[] @object() {
			return GetRuleContexts<ObjectContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectContext @object(int i) {
			return GetRuleContext<ObjectContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IncludeContext[] include() {
			return GetRuleContexts<IncludeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IncludeContext include(int i) {
			return GetRuleContext<IncludeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Namespace_declContext[] namespace_decl() {
			return GetRuleContexts<Namespace_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Namespace_declContext namespace_decl(int i) {
			return GetRuleContext<Namespace_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_declContext[] type_decl() {
			return GetRuleContexts<Type_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_declContext type_decl(int i) {
			return GetRuleContext<Type_declContext>(i);
		}
		public SchemaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_schema; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterSchema(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitSchema(this);
		}
	}

	[RuleVersion(0)]
	public SchemaContext schema() {
		SchemaContext _localctx = new SchemaContext(Context, State);
		EnterRule(_localctx, 0, RULE_schema);
		 _localctx.output =  new FlatMemGenerator.FlatBufferTree(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 56;
				_localctx.includeOne = include();
				 _localctx.output.m_includes.Add(_localctx.includeOne.output); 
				}
				}
				State = 63;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 129768L) != 0)) {
				{
				State = 77;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__2:
					{
					State = 64;
					_localctx.namespaceOne = namespace_decl();
					 _localctx.output.m_namespaces.AddRange(_localctx.namespaceOne.output); 
					}
					break;
				case T__4:
				case T__5:
					{
					State = 67;
					_localctx.typeOne = type_decl();
					 _localctx.output.m_types.Add(_localctx.typeOne.output); 
					}
					break;
				case T__8:
				case T__10:
					{
					State = 70;
					enum_decl();
					}
					break;
				case T__11:
					{
					State = 71;
					root_decl();
					}
					break;
				case T__12:
					{
					State = 72;
					file_extension_decl();
					}
					break;
				case T__13:
					{
					State = 73;
					file_identifier_decl();
					}
					break;
				case T__14:
					{
					State = 74;
					attribute_decl();
					}
					break;
				case T__15:
					{
					State = 75;
					rpc_decl();
					}
					break;
				case T__6:
					{
					State = 76;
					@object();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 82;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncludeContext : ParserRuleContext {
		public string output;
		public IToken stringConstantOne;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringConstant() { return GetToken(FlatBuffersParser.StringConstant, 0); }
		public IncludeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_include; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterInclude(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitInclude(this);
		}
	}

	[RuleVersion(0)]
	public IncludeContext include() {
		IncludeContext _localctx = new IncludeContext(Context, State);
		EnterRule(_localctx, 2, RULE_include);
		 _localctx.output =  ""; 
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			Match(T__0);
			State = 85;
			_localctx.stringConstantOne = Match(StringConstant);
			 _localctx.output += (_localctx.stringConstantOne!=null?_localctx.stringConstantOne.Text:null); 
			State = 87;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Namespace_declContext : ParserRuleContext {
		public List<string> output;
		public IToken identFirst;
		public IToken identLeft;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Ident() { return GetTokens(FlatBuffersParser.Ident); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Ident(int i) {
			return GetToken(FlatBuffersParser.Ident, i);
		}
		public Namespace_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterNamespace_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitNamespace_decl(this);
		}
	}

	[RuleVersion(0)]
	public Namespace_declContext namespace_decl() {
		Namespace_declContext _localctx = new Namespace_declContext(Context, State);
		EnterRule(_localctx, 4, RULE_namespace_decl);
		 _localctx.output =  new List<string>(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			Match(T__2);
			State = 90;
			_localctx.identFirst = Match(Ident);
			 _localctx.output.Add((_localctx.identFirst!=null?_localctx.identFirst.Text:null)); 
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__3) {
				{
				{
				State = 92;
				Match(T__3);
				State = 93;
				_localctx.identLeft = Match(Ident);
				 _localctx.output.Add((_localctx.identLeft!=null?_localctx.identLeft.Text:null)); 
				}
				}
				State = 99;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 100;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_declContext : ParserRuleContext {
		public FlatMemGenerator.FlatBufferType output;
		public IToken identOne;
		public Type_annotation_declContext typeAnnotationOne;
		public Field_declContext fieldOne;
		[System.Diagnostics.DebuggerNonUserCode] public MetadataContext metadata() {
			return GetRuleContext<MetadataContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Ident() { return GetToken(FlatBuffersParser.Ident, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Type_annotation_declContext type_annotation_decl() {
			return GetRuleContext<Type_annotation_declContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Field_declContext[] field_decl() {
			return GetRuleContexts<Field_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Field_declContext field_decl(int i) {
			return GetRuleContext<Field_declContext>(i);
		}
		public Type_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterType_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitType_decl(this);
		}
	}

	[RuleVersion(0)]
	public Type_declContext type_decl() {
		Type_declContext _localctx = new Type_declContext(Context, State);
		EnterRule(_localctx, 6, RULE_type_decl);
		 _localctx.output =  new FlatMemGenerator.FlatBufferType(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__4:
				{
				State = 102;
				Match(T__4);
				 _localctx.output.m_kind = FlatMemGenerator.TypeKind.Table; 
				}
				break;
			case T__5:
				{
				State = 104;
				Match(T__5);
				 _localctx.output.m_kind = FlatMemGenerator.TypeKind.Struct; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 108;
			_localctx.identOne = Match(Ident);
			  _localctx.output.m_name = (_localctx.identOne!=null?_localctx.identOne.Text:null); 
			State = 110;
			metadata();
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__19) {
				{
				State = 111;
				_localctx.typeAnnotationOne = type_annotation_decl();
				 _localctx.output.m_indexes = _localctx.typeAnnotationOne.output; 
				}
			}

			State = 116;
			Match(T__6);
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 117;
				_localctx.fieldOne = field_decl();
				 _localctx.output.m_fields.Add(_localctx.fieldOne.output); 
				}
				}
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==Ident );
			State = 124;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Enum_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MetadataContext metadata() {
			return GetRuleContext<MetadataContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Commasep_enumval_declContext commasep_enumval_decl() {
			return GetRuleContext<Commasep_enumval_declContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Ident() { return GetToken(FlatBuffersParser.Ident, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Type_Context type_() {
			return GetRuleContext<Type_Context>(0);
		}
		public Enum_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enum_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterEnum_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitEnum_decl(this);
		}
	}

	[RuleVersion(0)]
	public Enum_declContext enum_decl() {
		Enum_declContext _localctx = new Enum_declContext(Context, State);
		EnterRule(_localctx, 8, RULE_enum_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__8:
				{
				State = 126;
				Match(T__8);
				State = 127;
				Match(Ident);
				State = 128;
				Match(T__9);
				State = 129;
				type_();
				}
				break;
			case T__10:
				{
				State = 130;
				Match(T__10);
				State = 131;
				Match(Ident);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 134;
			metadata();
			State = 135;
			Match(T__6);
			State = 136;
			commasep_enumval_decl();
			State = 137;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Root_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Ident() { return GetToken(FlatBuffersParser.Ident, 0); }
		public Root_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterRoot_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitRoot_decl(this);
		}
	}

	[RuleVersion(0)]
	public Root_declContext root_decl() {
		Root_declContext _localctx = new Root_declContext(Context, State);
		EnterRule(_localctx, 10, RULE_root_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			Match(T__11);
			State = 140;
			Match(Ident);
			State = 141;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class File_extension_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringConstant() { return GetToken(FlatBuffersParser.StringConstant, 0); }
		public File_extension_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file_extension_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterFile_extension_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitFile_extension_decl(this);
		}
	}

	[RuleVersion(0)]
	public File_extension_declContext file_extension_decl() {
		File_extension_declContext _localctx = new File_extension_declContext(Context, State);
		EnterRule(_localctx, 12, RULE_file_extension_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 143;
			Match(T__12);
			State = 144;
			Match(StringConstant);
			State = 145;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class File_identifier_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringConstant() { return GetToken(FlatBuffersParser.StringConstant, 0); }
		public File_identifier_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file_identifier_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterFile_identifier_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitFile_identifier_decl(this);
		}
	}

	[RuleVersion(0)]
	public File_identifier_declContext file_identifier_decl() {
		File_identifier_declContext _localctx = new File_identifier_declContext(Context, State);
		EnterRule(_localctx, 14, RULE_file_identifier_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 147;
			Match(T__13);
			State = 148;
			Match(StringConstant);
			State = 149;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
